Added - Made keyboard disappear upon tapping elsewhere - Screens for key functionalities - Reaction game (80% complete - font and styling adjustments needed)
Co-authored by: @Joncwr99 and @Mikealeee

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">RNG</string>
+    <string name="app_name2">BrainiAct</string>
+    <string name="Game">Game</string>
+    <string name="Leaderboard">Leaderboard</string>
+    <string name="Reaction">Reaction</string>
+    <string name="Memory">Memory</string>
+    <string name="Trail_test">Trail Making Test</string>
+    <string name="Logout">Logout</string>
+    <string name="start">Start</string>
+    <string name="Start_prompt">Click the play button to start</string>
+    <string name="Retry">Retry</string>
+    <string name="Exit">Exit</string>
 </resources>
